# libc-tests

./: .gitignore  CMakeLists.txt  LICENSE  README.md
tests/: CMakeLists.txt  strftime_test.cc  strptime_test.cc
